--- a/src/renderer/EditorWindow/EditorWindow.scss
+++ b/src/renderer/EditorWindow/EditorWindow.scss
@@ -2,13 +2,10 @@
 .editor-window {
     background-color: black;
     color: white;
-    position: fixed;
     z-index: 1000;
-    bottom: 0;
-    right: 0;
     width: 300px;
-    height: 200px;
-    border-radius: 4px;
-    margin: 8px;
+    height: 100vh;
     padding: 8px;
+    overflow-x: scroll;
+    overflow-y: scroll;
 }
