--- a/src/renderer/components/EditorWindow/EditorWindow.scss
+++ b/src/renderer/components/EditorWindow/EditorWindow.scss
@@ -1,11 +1,15 @@
+@import '../../theme/colors.scss';
+@import url('https://fonts.googleapis.com/css2?family=Noto+Sans&display=swap');
 
 .editor-window {
-    background-color: black;
-    color: white;
+    background-color: $background;
+    color: $foreground;
+    font-family: 'Noto Sans', sans-serif;
     z-index: 1000;
     width: 300px;
     height: 100vh;
     padding: 8px;
     overflow-x: scroll;
     overflow-y: scroll;
+    font-size: 16px;
 }
