--- a/src/renderer/components/EditorWindow/EditorWindow.scss
+++ b/src/renderer/components/EditorWindow/EditorWindow.scss
@@ -2,14 +2,24 @@
 @import url('https://fonts.googleapis.com/css2?family=Noto+Sans&display=swap');
 
 .editor-window {
+    display: flex;
+    flex-direction: row;
+    align-items: stretch;
+}
+
+.editor-content {
     background-color: $background;
     color: $foreground;
     font-family: 'Noto Sans', sans-serif;
     z-index: 1000;
-    width: 300px;
-    height: 100vh;
     padding: 8px;
     overflow-x: scroll;
     overflow-y: scroll;
-    font-size: 16px;
+    font-size: 14px;
+}
+
+.editor-drag {
+    width: 20px;
+    background-color: gray;
+    cursor: ew-resize;
 }
