--- a/src/renderer/components/EditorWindow/EditorWindow.scss
+++ b/src/renderer/components/EditorWindow/EditorWindow.scss
@@ -2,6 +2,9 @@
 @import url('https://fonts.googleapis.com/css2?family=Noto+Sans&display=swap');
 
 .editor-window {
+    position: fixed;
+    z-index: 9999;
+    height: 100vh;
     display: flex;
     flex-direction: row;
     align-items: stretch;
@@ -9,17 +12,19 @@
 
 .editor-content {
     background-color: $background;
+    flex: 1;
     color: $foreground;
     font-family: 'Noto Sans', sans-serif;
-    z-index: 1000;
     padding: 8px;
     overflow-x: scroll;
     overflow-y: scroll;
     font-size: 14px;
+    white-space: nowrap;
 }
 
 .editor-drag {
     width: 20px;
     background-color: gray;
     cursor: ew-resize;
+    z-index: 1000;
 }
