--- a/src/renderer/components/EditorWindow/EditorWindow.scss
+++ b/src/renderer/components/EditorWindow/EditorWindow.scss
@@ -33,4 +33,17 @@
     background-color: gray;
     cursor: ew-resize;
     z-index: 1000;
+
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+    button {
+        width: 100%;
+        height: 200px;
+        background-color: $lightgray;
+        color: $background;
+        border: none;
+        cursor: pointer;
+    }
 }
