--- a/src/renderer/components/JsonEditor/JsonEditor.scss
+++ b/src/renderer/components/JsonEditor/JsonEditor.scss
@@ -22,7 +22,25 @@
         }
     }
 
-    .json-value {
+    .create-button {
+        background-color: transparent;
+        border-style: none;
+        margin-left: 0.2rem;
+        margin-top: 0.05rem;
+        margin-bottom: 0.05rem;
+        border-radius: 0.2rem;
+
+        i {
+            color: $foreground;
+            font-size: 1rem;
+        }
+
+        &:hover {
+            cursor: pointer;
+            i {
+                color: $focusblue;
+            }
+        }
     }
 
     input {
